added all endpoints and swagger
